<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:gravity="center"
        android:text="@string/back_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large" />

    <EditText
        android:id="@+id/user_name_et"
        style="@style/login_edit_style"
        android:layout_marginTop="60dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="11" />

    <LinearLayout
        android:id="@+id/valid_code_ll"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_bg_border_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/valid_code_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/valid_code"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:textSize="@dimen/text_middle" />

        <com.saiyi.gymequipment.common.view.CountDownView
            android:id="@+id/valid_code_cdv"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_btn_identifycode"
            android:gravity="center"
            android:minWidth="85dp"
            android:padding="5dp"
            android:text="@string/send_valid_code"
            android:textColor="@drawable/identify_btn_text_enbale_status_drawable"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <EditText
        android:id="@+id/register_password_et"
        style="@style/login_edit_style"
        android:layout_marginTop="14dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_pre_password_et"
        style="@style/login_edit_style"
        android:layout_marginTop="14dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/logger_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="请输入验证码"
        android:textColor="@color/red_ff3d3d"
        android:textSize="@dimen/text_small"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/btn_ok"
        style="@style/submit_btn_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/text_middle" />
</LinearLayout>