<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large" />

    <EditText
        android:id="@+id/user_name_et"
        style="@style/login_edit_style"
        android:layout_marginTop="60dp"
        android:inputType="number"
        android:hint="@string/phone_number" />


    <EditText
        android:id="@+id/user_pwd_et"
        style="@style/login_edit_style"
        android:layout_marginTop="14dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/login_logger_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="密码不正确"
        android:textColor="@color/red_ff3d3d"
        android:textSize="@dimen/text_small"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_btn"
        style="@style/submit_btn_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/text_middle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/go_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_register"
            android:textColor="@color/login_text_normal_color"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/forget_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            android:textColor="@color/login_text_normal_color"
            android:textSize="@dimen/text_small" />
    </RelativeLayout>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_above="@+id/wechat_login_iv">
            
            <View
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                android:layout_weight="1"
                android:layout_marginRight="1dp"
                android:background="@color/hint_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:text="@string/other_login"
                android:textColor="@color/hint_text_color"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:background="@color/hint_text_color"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/wechat_login_iv"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/wechat"/>
    </RelativeLayout>

</LinearLayout>